Adding some of my projects

--- a/index.html
+++ b/index.html
@@ -274,6 +274,30 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         				</div>
         			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/herculesgroup.png" alt="">
+        						<a class="light" href="img/gallery/herculesgroup.png"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+                                <h4><a target="_blank" href='https://prologis.netlify.app/'>Website for HeculesGroup real estate company</a></h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/image.png" alt="">
+        						<a class="light" href="img/gallery/image.png"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+                                <h4><a target="_blank" href='https://innovation-landing-page-by-mourig-dev.netlify.app/'>Innovation Landing Page</a></h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+        			</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
@@ -286,18 +310,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/image.png" alt="">
-        						<a class="light" href="img/gallery/image.png"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
-        					<div class="g_item_text">
-                                <h4><a href='file:///home/chronos/u-7b494337aedd17d8a923545ccee2537665af9970/MyFiles/Projects-master/landing%20page%20Innovation/index.html'>Innovation Landing Page</a></h4>
-        						<p>Client Project</p>
-        					</div>
-        				</div>
-        			</div>
+
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
@@ -310,14 +323,15 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         				</div>
         			</div>
+
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/herculesgroup.png" alt="">
-        						<a class="light" href="img/gallery/herculesgroup.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/UNIVERSAL.png" alt="">
+        						<a class="light" href="img/gallery/UNIVERSAL.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-                                <h4><a target="_blank" href='https://prologis.netlify.app/'>Website for HeculesGroup real estate company</a></h4>
+                                <h4><a target="_blank" href='https://music-web-interface-by-mourigdev.netlify.app/'>UNIVERSAL Music Web App Landing Page</a></h4>
         						<p>Client Project</p>
         					</div>
         				</div>
@@ -335,7 +349,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         <footer class="footer_area p_120">
         	<div class="container">
         		<center>
-                    Mourig Abdellah
+                    Created with <span style="color: aqua;">♡</span> By MOURIG ABDELLAH
                 </center>
         	</div>
         </footer>
