adding new colors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>MeetMe Personal</title>
+        <title>MeetMe Personal Mourigdev</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -270,7 +270,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         					<div class="g_item_text">
                                 <h4><a target="_blank" href='https://edukids.netlify.app/'>Build Edukids company website with REACT</a></h4>
-        						<p>Client Project</p>
+        						<p>Client Project - React</p>
         					</div>
         				</div>
         			</div>
@@ -282,7 +282,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         					<div class="g_item_text">
                                 <h4><a target="_blank" href='https://prologis.netlify.app/'>Website for HeculesGroup real estate company</a></h4>
-        						<p>Client Project</p>
+        						<p>Client Project - React</p>
         					</div>
         				</div>
         			</div>
@@ -301,12 +301,12 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul creative">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="image.png" alt="">
-        						<a class="light" href="image.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/firebon2.png" alt="">
+        						<a class="light" href="img/gallery/firebon2.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-                                <h4><a href='./services2.html'>Techshop Store With React</a></h4>
-        						<p>Client Project</p>
+                                <h4><a target="_blank" href='https://bon-fire.netlify.app/'>FireBaun CRAFTING DIGITAL AGENCY </a></h4>
+        						<p>Client Project - React</p>
         					</div>
         				</div>
         			</div>
