adding some projects

--- a/index.html
+++ b/index.html
@@ -205,6 +205,18 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
+											<p><b style='opacity:0'>March</b> 2021 to present</p>
+										</div>
+										<div class="media-body">
+											<h4>Working at Golden Bay Media</h4>
+											<p>it's an Ecommerce Solution Company</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
 											<p><b style='opacity:0'>March</b> 2018 to present</p>
 										</div>
 										<div class="media-body">
