adding some infos

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<h6>Hello Everybody, i am</h6>
 									<h3>MOURIG ABDELLAH</h3>
 									<h4>FullStack Developer & Marketing Specialist</h4>
-									<p>I'm a web developer👋 that loves simplifying things. Breaking down complex problems into simple, easy to understand solutions. I Currently live in Morocco as a Web developer. In my spare time, I play soccer and Checkers Dama :) .</p>
+									<p>I'm a FullStack developer👋 that loves simplifying things. Breaking down complex problems into simple, easy to understand solutions. I Currently live in Morocco as a FullStack developer. In my spare time, I play soccer and Checkers Dama :) .</p>
 									<ul class="list basic_info">
 										<li><a id='jhh' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-calendar-full"></i> AGE:23 years old</a></li>
 										<li><a id='jhhh' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-phone-handset"></i> 06 3033 4008</a></li>
