adding some infos

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<p>I'm a FullStack developer👋 that loves simplifying things. Breaking down complex problems into simple, easy to understand solutions. I Currently live in Morocco as a FullStack developer. In my spare time, I play soccer and Checkers Dama :) .</p>
 									<ul class="list basic_info">
 										<li><a id='jhh' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-calendar-full"></i> AGE:23 years old</a></li>
-										<li><a id='jhhh' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-phone-handset"></i> 06 3033 4008</a></li>
+										<li><a id='jhhh'  href="tel:+212630334008" ><i class="lnr lnr-phone-handset"></i> +212 6 3033 4008</a></li>
 										<li><a id='jhhl' href="mailto:mourig.abdellah.dev@gmail.com" role="tab"><i class="lnr lnr-envelope"></i>mourig.abdellah.dev@gmail.com</a></li>
 										<li><a id='jhhk' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-home"></i> BNI SAID BAHRAINE TANGIER</a></li>
 									</ul>
