adding some infos

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
 										</div>
 										<div class="media-body">
 											<h4>I become a META CERTIFIED Developer</h4>
-											<p>Certificatied by Meta Inc at<br />Coursera Platform</p>
+											<p>Certified by Meta Inc at<br />Coursera Platform</p>
 										</div>
 									</div>
 								</li>
