adding some infos

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
 											<p><b style='opacity:0'>March 2017 t</b> 2020-2021</p>
 										</div>
 										<div class="media-body">
-											<h4>SOLICODE digital solidarity center</h4>
+											<h4>SOLICODE digital center</h4>
 											<p>Web Development Qualification Certificate <br />Tangier</p>
 										</div>
 									</div>
