adding some new details

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>MeetMe Personal Mourigdev</title>
+        <title>MeetMe I'm Mourigdev</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -289,11 +289,11 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
 					<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/herculesgroup.png" alt="">
-        						<a class="light" href="img/gallery/herculesgroup.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/herculesgroup3.png" alt="">
+        						<a class="light" href="img/gallery/herculesgroup3Full.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-                                <h4><a target="_blank" href='https://prologis.netlify.app/'>Website for HeculesGroup real estate company</a></h4>
+                                <h4><a target="_blank" href='https://herculesgroup.ma/'>Website for heculesgroup.ma <br> real estate company</a></h4>
         						<p>Client Project - React</p>
         					</div>
         				</div>
