adding some new details

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
         <link rel="stylesheet" href="vendors/animate-css/animate.css">
         <link rel="stylesheet" href="vendors/popup/magnific-popup.css">
         <link rel="stylesheet" href="vendors/flaticon/flaticon.css">
+		<link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+
         <!-- main css -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
 		<style>
 
-
+html {
+  scroll-behavior: smooth;
+}
 
 .container{
     @media(min-width:1200px){
@@ -38,6 +43,13 @@
 	}
 }
 
+.topicon{
+	/* color: #766dff !important; */
+	color: #fff !important;
+}
+.socialicons:hover > i {
+		color: #fff !important;
+}
 		</style>
     </head>
     <body>
@@ -86,12 +98,15 @@
 									<h4>FullStack Developer & Marketing Specialist</h4>
 									<p>I'm a FullStack developer👋 that loves simplifying things. Breaking down complex problems into simple, easy to understand solutions. I Currently live in Morocco as a FullStack developer. In my spare time, I play soccer and Checkers Dama :) .</p>
 									<ul class="list basic_info">
-										<li><a id='jhh' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-calendar-full"></i> AGE:23 years old</a></li>
-										<li><a id='jhhh'  href="tel:+212630334008" ><i class="lnr lnr-phone-handset"></i> +212 6 3033 4008</a></li>
-										<li><a id='jhhl' href="mailto:mourig.abdellah.dev@gmail.com" role="tab"><i class="lnr lnr-envelope"></i>mourig.abdellah.dev@gmail.com</a></li>
-										<li><a id='jhhk' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-home"></i> BNI SAID BAHRAINE TANGIER</a></li>
+										<li><a id='jhh' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-calendar-full "></i> AGE:23 years old</a></li>
+										<li><a id='jhhh'  href="tel:+212630334008" ><i class="lnr lnr-phone-handset "></i> +212 6 3033 4008</a></li>
+										<li><a id='jhhl' href="mailto:mourig.abdellah.dev@gmail.com" role="tab"><i class="lnr lnr-envelope "></i>mourig.abdellah.dev@gmail.com</a></li>
+										<li><a id='jhhk' data-toggle="tab" href="#" role="tab"><i class="lnr lnr-home "></i> BNI SAID BAHRAINE TANGIER</a></li>
 									</ul>
 									<ul class="list personal_social">
+										<li><a class="socialicons" style="background-color: rgb(255 255 255);" href="https://github.com/mourigdev"><i style="color:#5e76b6;font-size: 25px;" class="ri-github-fill "></i></a></li>
+										<li><a class="socialicons" style="background-color: rgb(255 255 255);" href="https://www.instagram.com/mourigdev/"><i style="color:#5e76b6;font-size: 25px;" class="ri-instagram-line "></i></a></li>
+										<li><a class="socialicons" style="background-color: rgb(255 255 255);" href="https://web.whatsapp.com/send/?phone=212630334008"><i style="color:#5e76b6;font-size: 25px;" class="ri-whatsapp-line "></i></a></li>
 
 									</ul>
 								</div>
