adding my new projects

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         						<a class="light" href="img/gallery/edukids.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-                                <h4><a target="_blank" href='https://edukids.netlify.app/'>Build Edukids company website with REACT</a></h4>
+                                <h4><a target="_blank" href='https://edukids.netlify.app/'>Edukids company website with REACT</a></h4>
         						<p>Client Project - React</p>
         					</div>
         				</div>
@@ -310,6 +310,18 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					<div class="g_item_text">
                                 <h4><a target="_blank" href='https://herculesgroup.ma/'>Website for heculesgroup.ma <br> real estate company</a></h4>
         						<p>Client Project - React</p>
+        					</div>
+        				</div>
+        			</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/iphone14.gif" alt="">
+        						<a class="light" href="img/gallery/iphone14.gif"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+                                <h4><a target="_blank" href='https://mourigdev-iphone-3d-animation.netlify.app/'>Iphone ShowCase 3D Website</a></h4>
+								<p>Mastering GSAP with React</p>
         					</div>
         				</div>
         			</div>
@@ -360,6 +372,18 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					<div class="g_item_text">
                                 <h4><a target="_blank" href='https://music-web-interface-by-mourigdev.netlify.app/'>UNIVERSAL Music Web App Landing Page</a></h4>
         						<p>Client Project</p>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/boat-3dwebsite.gif" alt="">
+        						<a class="light" href="img/gallery/boat-3dwebsite.gif"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+                                <h4><a target="_blank" href='https://react-framer-gold-animation.netlify.app/'>Framer Gold Animation</a></h4>
+        						<p>Mastering Framer with React</p>
         					</div>
         				</div>
         			</div>
