--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         						<a class="light" href="img/gallery/edukids.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
-                                <h4><a target="_blank" href='https://edukids.netlify.app/'>Edukids company website with REACT</a></h4>
+                                <h4><a target="_blank" href='https://edukids.nl/'>Edukids company website with REACT</a></h4>
         						<p>Client Project - React</p>
         					</div>
         				</div>
