--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/edukids.png" alt="">
-        						<a class="light" href="img/gallery/edukids.png"><img src="img/gallery/icon.png" alt=""></a>
+        						<img class="img-fluid" src="img/gallery/edukids1.png" alt="">
+        						<a class="light" href="img/gallery/edukids1.png"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
         					<div class="g_item_text">
                                 <h4><a target="_blank" href='https://edukids.nl/'>Edukids company website with REACT</a></h4>
