--- a/index.html
+++ b/index.html
@@ -301,6 +301,18 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         				</div>
         			</div>
+        			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
+        				<div class="h_gallery_item">
+        					<div class="g_img_item">
+        						<img class="img-fluid" src="img/gallery/Monerus.gif" alt="">
+        						<a class="light" href="img/gallery/Monerus.gif"><img src="img/gallery/icon.png" alt=""></a>
+        					</div>
+        					<div class="g_item_text">
+                                <h4><a target="_blank" href='https://monerus.co/'>Monerus a Law Enforcement & Healthcare AI Solutions Company</a></h4>
+        						<p>Client Project</p>
+        					</div>
+        				</div>
+        			</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
@@ -349,7 +361,6 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         				</div>
         			</div>
-
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
@@ -362,7 +373,6 @@ I am armed with a multitude of tools that allow me to meet your expectations.</p
         					</div>
         				</div>
         			</div>
-
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
